restructure files to have the 5 part LASER framework structure

--- a/lab-4/ll-4-case-study.Rmd
+++ b/lab-4/ll-4-case-study.Rmd
@@ -23,23 +23,46 @@ set.seed(20230630) # so the results are readily reproducible
 
 ## 1. PREPARE
 
-While the past three case studies have involved *already-coded* data, sometimes, we do not have something that we can consider to be coded data---a dependent variable. But, machine learning does offer us way forward in such
-cases, but not through the supervised machine learning methods we've
-been using until this point. Instead, we can use *unsupervised* methods.
+While the past three case studies have involved *already-coded* data,
+sometimes, we do not have something that we can consider to be coded
+data---a dependent variable. But, machine learning does offer us way
+forward in such cases, but not through the supervised machine learning
+methods we've been using until this point. Instead, we can use
+*unsupervised* methods.
 
-The driving question for this learning lab is: *What if we do not have training data?*
+The driving question for this learning lab is: *What if we do not have
+training data?*
 
-We answer this question in the context of *multimodal* data, or data from multiple channels, including not only the kinds of digital trace data and survey data, but also data from audio and video channels. This kind of data is often rich, but hard to interpret at a granular level. 
+We answer this question in the context of *multimodal* data, or data
+from multiple channels, including not only the kinds of digital trace
+data and survey data, but also data from audio and video channels. This
+kind of data is often rich, but hard to interpret at a granular level.
 
-We'll be using audio data from mathematics classrooms collected as a part of Dyer's [*Learning Through Teaching* (LTT) project](https://www.proquest.com/openview/01af3361c531b12ea3caeda8b85b31fa/1?pq-origsite=gscholar&cbl=18750). In this project, hundres of hours of video and audio were collected from high school and middle school classrooms. The specific data set we are using is transcribed data (via [Whisper](https://github.com/bnosac/audio.whisper)) that is analyzed for the different affective or emotional sentiment it evidences. The goal of the study is to try to identify moments in the audio data that suggest negative affect on the part of students in the context of learning mathematics. 
+We'll be using audio data from mathematics classrooms collected as a
+part of Dyer's [*Learning Through Teaching* (LTT)
+project](https://www.proquest.com/openview/01af3361c531b12ea3caeda8b85b31fa/1?pq-origsite=gscholar&cbl=18750).
+In this project, hundres of hours of video and audio were collected from
+high school and middle school classrooms. The specific data set we are
+using is transcribed data (via
+[Whisper](https://github.com/bnosac/audio.whisper)) that is analyzed for
+the different affective or emotional sentiment it evidences. The goal of
+the study is to try to identify moments in the audio data that suggest
+negative affect on the part of students in the context of learning
+mathematics.
 
-How can we do this? We'll use the process of Latent Profile Analysis to try to identify how students' affect is expressed. We'll interpret this output through a *Computational Grounded Theory* approach, one that takes the output of techniques like Latent Profile Analysis as a starting point for subsequent qualitative analyses. 
+How can we do this? We'll use the process of Latent Profile Analysis to
+try to identify how students' affect is expressed. We'll interpret this
+output through a *Computational Grounded Theory* approach, one that
+takes the output of techniques like Latent Profile Analysis as a
+starting point for subsequent qualitative analyses.
 
-Please consult two papers to get a good handle on the methodological background:
+Please consult two papers to get a good handle on the methodological
+background:
 
-First, Commeford et al. (2022) estimated profiles of college-levels instructors' teaching practices,
-specifically their teaching practices relating to active learning. They
-did so using Latent Profile Analysis -- and [the tidyLPA package in
+First, Commeford et al. (2022) estimated profiles of college-levels
+instructors' teaching practices, specifically their teaching practices
+relating to active learning. They did so using Latent Profile Analysis
+-- and [the tidyLPA package in
 R](https://data-edu.github.io/tidyLPA/index.html) that we'll be using.
 
 > Commeford, K., Brewe, E., & Traxler, A. (2022). Characterizing active
@@ -47,21 +70,26 @@ R](https://data-edu.github.io/tidyLPA/index.html) that we'll be using.
 > Physical Review Physics Education Research, 18(1), 010113.
 > <https://github.com/laser-institute/essential-readings/blob/main/machine-learning/ml-lab-4/commeford-et-al-2022-per.pdf>
 
-Second, please read a paper that uses Computational Grounded Theory---here, in the context of students' written responses to in-class questions:
+Second, please read a paper that uses Computational Grounded
+Theory---here, in the context of students' written responses to in-class
+questions:
 
-> Rosenberg, J. M., & Krist, C. (2021). Combining machine learning and qualitative methods to elaborate students’ ideas about the generality of their model-based explanations. *Journal of Science Education and Technology, 30*, 255-267.
+> Rosenberg, J. M., & Krist, C. (2021). Combining machine learning and
+> qualitative methods to elaborate students' ideas about the generality
+> of their model-based explanations. *Journal of Science Education and
+> Technology, 30*, 255-267.
 
 One note for this learning lab. LPA can be a finnicky method; the best
 practices regarding model selection are often difficult to achieve in
-practice. We'll do our best working
-with the information we have - as we often have to do in practice. If
-publishing a paper, we can present these issues in our manuscript in a
-transparent manner.
+practice. We'll do our best working with the information we have - as we
+often have to do in practice. If publishing a paper, we can present
+these issues in our manuscript in a transparent manner.
 
 ## 2. WRANGLE
 
 First, let's load the packages we'll use---the familiar {tidyverse} and
-the {tidyLPA package}, as well as {tidytext} to do some basic text analysis. 
+the {tidyLPA package}, as well as {tidytext} to do some basic text
+analysis.
 
 #### [Your Turn]{style="color: green;"} ⤵
 
@@ -73,7 +101,8 @@ library(tidytext)
 
 #### [Your Turn]{style="color: green;"} ⤵
 
-Next, please read in the `r-processed-transcript`.csv` file, naming it `transcript`.
+Next, please read in the
+`r-processed-transcript`.csv`file, naming it`transcript\`.
 
 ```{r}
 transcript <- read_csv("data/r-processed-transcript.csv")
@@ -83,16 +112,24 @@ transcript <- read_csv("data/r-processed-transcript.csv")
 
 #### [Your Turn]{style="color: green;"} ⤵
 
-Please take a look at the data using a technique of your choice. Note the number of rows and the variables and their types.
+Please take a look at the data using a technique of your choice. Note
+the number of rows and the variables and their types.
 
 ```{r}
 transcript %>% 
     glimpse()
 ```
 
-Note how the `transcript_text` variable consists of transcripted _turns_ of speech (not individual words), corresponding roughly to what an individual says in a conversation.
+Note how the `transcript_text` variable consists of transcripted *turns*
+of speech (not individual words), corresponding roughly to what an
+individual says in a conversation.
 
-We'll next do some analyses over several chunks to create the variables for the emotional expression evidenced in the transcripted data. Given the focus of this learning lab on Latent Profile Analysis, we'll treat this aspect in a more limited way. Please consider joining the first text analysis learning lab to gain a lot more context and to see in far greater detail how we can work with textual data in R.
+We'll next do some analyses over several chunks to create the variables
+for the emotional expression evidenced in the transcripted data. Given
+the focus of this learning lab on Latent Profile Analysis, we'll treat
+this aspect in a more limited way. Please consider joining the first
+text analysis learning lab to gain a lot more context and to see in far
+greater detail how we can work with textual data in R.
 
 ```{r}
 nrc <- get_sentiments("nrc") # this access sentiment
@@ -106,7 +143,8 @@ transcript %>%
     count(sentiment)
 ```
 
-Since each turn is of a different length, next, we'll create 30-second chunks in the data.
+Since each turn is of a different length, next, we'll create 30-second
+chunks in the data.
 
 ```{r}
 chunk_size <- 45  # chunk duration in seconds
@@ -120,7 +158,9 @@ transcript$end <- as.integer(transcript$end)
 transcript$segment_id <- cut(transcript$start, breaks = seq(from = start_point, to = end_point, by = chunk_size))
 ```
 
-Finally, we'll do some additional processing. A _lot_ of this is new, and not important to have a mastery of for this learning lab. To learn more, check out the text mining labs!
+Finally, we'll do some additional processing. A *lot* of this is new,
+and not important to have a mastery of for this learning lab. To learn
+more, check out the text mining labs!
 
 ```{r}
 number_of_words_per_segment <- transcript  %>% 
@@ -151,14 +191,22 @@ We're now ready to proceed to modeling.
 
 ### Step 1: Explore a range of solutions
 
-We *could* estimate a single solution. Please use the `estimate_profiles()` function with the data in `data_for_lpa`, specifying the number of profiles as 3. For help, consult the [help](https://data-edu.github.io/tidyLPA/reference/estimate_profiles.html) file.
+We *could* estimate a single solution. Please use the
+`estimate_profiles()` function with the data in `data_for_lpa`,
+specifying the number of profiles as 3. For help, consult the
+[help](https://data-edu.github.io/tidyLPA/reference/estimate_profiles.html)
+file.
 
 ```{r}
 data_for_lpa %>% 
     estimate_profiles(n_profiles = 3)
 ```
 
-We can see output for *a single model fit*. Let's take a look at what the estimates are. We can do so in several ways. In particular, we can pipe the output above to either `plot_profiles()` or `get_estimates()`. Let's add `plot_profiles(add_line = TRUE)` to the above code, copying all three lines into the code chunk below.
+We can see output for *a single model fit*. Let's take a look at what
+the estimates are. We can do so in several ways. In particular, we can
+pipe the output above to either `plot_profiles()` or `get_estimates()`.
+Let's add `plot_profiles(add_line = TRUE)` to the above code, copying
+all three lines into the code chunk below.
 
 ```{r}
 data_for_lpa %>% 
@@ -166,7 +214,12 @@ data_for_lpa %>%
     plot_profiles(add_line = TRUE)
 ```
 
-What we are looking at are the estimates for the *means* of the three profiles (or, in LPA's terminology, classes). For instance, for the first class (represented with the color red), we can see how the profile mean is higher for some variables (relative to the means for the other classes), and lower for others. We'll go into much more depth on intepreting a profile solution shortly.
+What we are looking at are the estimates for the *means* of the three
+profiles (or, in LPA's terminology, classes). For instance, for the
+first class (represented with the color red), we can see how the profile
+mean is higher for some variables (relative to the means for the other
+classes), and lower for others. We'll go into much more depth on
+intepreting a profile solution shortly.
 
 ### Step 2: Select a solution
 
@@ -177,14 +230,13 @@ Fortunately, there are tools to help us.
 
 To do so, we'll examine a range of different profile solutions.
 
- Let's try the
-`compare_solutions()` function, which does just that. The
+Let's try the `compare_solutions()` function, which does just that. The
 `estimate_profiles()` function can, helpfully, estimate more than one
 set of profiles at once --- here, those with 1 through 8 profiles.
 
 #### [Your Turn]{style="color: green;"} ⤵
 
-To do so, please run `estimate_profiles` like we have above, 
+To do so, please run `estimate_profiles` like we have above,
 
 ```{r}
 data_for_lpa %>%
@@ -192,11 +244,21 @@ data_for_lpa %>%
     compare_solutions()
 ```
 
-We can interpret the fit statistic that is provided---the BIC, with more negative values indicating a better model fit---and see which model is best. In addition, we can use a process that considers several fit indices, the _analytic hierarchy process_. Sometimes, what the BIC and the analytic hierarchy process suggest diverge, as is the case here. In such a case, it can be helpful to interrogate several candidate solutions in a fine-grained way. 
+We can interpret the fit statistic that is provided---the BIC, with more
+negative values indicating a better model fit---and see which model is
+best. In addition, we can use a process that considers several fit
+indices, the *analytic hierarchy process*. Sometimes, what the BIC and
+the analytic hierarchy process suggest diverge, as is the case here. In
+such a case, it can be helpful to interrogate several candidate
+solutions in a fine-grained way.
 
 #### [Your Turn]{style="color: green;"} ⤵
 
-We can examine many fit statistics for candidate models by replacing `compare_solutions()` with `get_fit()`. You can read about each fit index [here](https://data-edu.github.io/tidyLPA/articles/Introduction_to_tidyLPA.html). Please run that code, below.
+We can examine many fit statistics for candidate models by replacing
+`compare_solutions()` with `get_fit()`. You can read about each fit
+index
+[here](https://data-edu.github.io/tidyLPA/articles/Introduction_to_tidyLPA.html).
+Please run that code, below.
 
 ```{r}
 data_for_lpa %>%
@@ -204,7 +266,8 @@ data_for_lpa %>%
     get_fit()
 ```
 
-We can also plot several possible solutions; again, please replace `compare_solutions()`, this time with `plot_profiles(add_line = TRUE)`:
+We can also plot several possible solutions; again, please replace
+`compare_solutions()`, this time with `plot_profiles(add_line = TRUE)`:
 
 ```{r}
 data_for_lpa %>%
@@ -212,15 +275,29 @@ data_for_lpa %>%
     plot_profiles(add_line = TRUE)
 ```
 
-How do we know which solution to be *the* solution we interpret and present? We need to consider several different factors, including a) the BIC and other individual fit indices, b) the analytic hierarchy output, c) considerations of parsimony, and d) considerations related to the interpretability of the profiles. 
+How do we know which solution to be *the* solution we interpret and
+present? We need to consider several different factors, including a) the
+BIC and other individual fit indices, b) the analytic hierarchy output,
+c) considerations of parsimony, and d) considerations related to the
+interpretability of the profiles.
 
 ### Step 3: Select and interpret a solution
 
-*Which solution do you thinks is best?* Given that the BIC indicates a three profile model, and given how the model with four profiles does not appear to yield a substantially distinct fourth profile, it seems reasonable to prefer three profiles over four. But, the analytic hierarchy process suggested a single profile model. Is a model with fewer profiles potentially merited? When comparing the three- and two-profile models, it seems that one profile is more distinguishable (based on the mean estimates) than the other two. For this reason, let's consider moving forward with a two-profile solution, recognizing that this data is somewhat messy, and the way forward is not wholly clear!
+*Which solution do you thinks is best?* Given that the BIC indicates a
+three profile model, and given how the model with four profiles does not
+appear to yield a substantially distinct fourth profile, it seems
+reasonable to prefer three profiles over four. But, the analytic
+hierarchy process suggested a single profile model. Is a model with
+fewer profiles potentially merited? When comparing the three- and
+two-profile models, it seems that one profile is more distinguishable
+(based on the mean estimates) than the other two. For this reason, let's
+consider moving forward with a two-profile solution, recognizing that
+this data is somewhat messy, and the way forward is not wholly clear!
 
 #### [Your Turn]{style="color: green;"} ⤵
 
-To do so, run `estimate_profiles()`, specifying two profiles, and assigning the output the name `two_profile_solution`. 
+To do so, run `estimate_profiles()`, specifying two profiles, and
+assigning the output the name `two_profile_solution`.
 
 ```{r}
 two_profile_solution <- estimate_profiles(data_for_lpa, n_profiles = 2)
@@ -232,10 +309,11 @@ Let's plot this solution using `plot_profiles(add_line = TRUE)`
 plot_profiles(two_profile_solution, add_line = TRUE)
 ```
 
-Typically, we'd name these solutions. Let's try to interpret and name these based upon their mean values:
+Typically, we'd name these solutions. Let's try to interpret and name
+these based upon their mean values:
 
-- Profile 1:
-- Profile 2:
+-   Profile 1:
+-   Profile 2:
 
 We still aren't done! Recall from the presentation how we discussed
 Computational Grounded Theory.
@@ -257,13 +335,21 @@ data_for_two_profile_solution <-
 
 #### [Your Turn]{style="color: green;"} ⤵
 
-Then, let's _bind_ together the profiles assigned to each chunk with the original data. Please use [`bind_rows()`](https://dplyr.tidyverse.org/reference/bind.html), providing both `data_for_lpa` and `data_for_two_profile_solution` together and assigning the output the name `combined_data`.
+Then, let's *bind* together the profiles assigned to each chunk with the
+original data. Please use
+[`bind_rows()`](https://dplyr.tidyverse.org/reference/bind.html),
+providing both `data_for_lpa` and `data_for_two_profile_solution`
+together and assigning the output the name `combined_data`.
 
 ```{r}
 combined_data <- bind_cols(data_for_lpa, data_for_two_profile_solution)
 ```
 
-Now, let's take a look at the data using `View()` the data frame we create next, `data_to_view`. *Don't* write this in a code chunk; instead, just view the data frame you jsut created by typing the code into the console (as `View()` can cause issues when it comes time to knit --- unless it is commented!).
+Now, let's take a look at the data using `View()` the data frame we
+create next, `data_to_view`. *Don't* write this in a code chunk;
+instead, just view the data frame you jsut created by typing the code
+into the console (as `View()` can cause issues when it comes time to
+knit --- unless it is commented!).
 
 ```{r}
 data_to_view <- left_join(transcript, combined_data) # this joins the transcript and combined data, so we can see which segment is associated with which profile, or class
@@ -272,10 +358,14 @@ data_to_view <- left_join(transcript, combined_data) # this joins the transcript
 
 ## 5. COMMUNICATE
 
-For now, let's keep our task relatively straightforward. How well do our names seem to characterize what is going on in a particular segment? Add a few notes below. Again, focus on what you would communicate about this analysis to a general audience. 
+For now, let's keep our task relatively straightforward. How well do our
+names seem to characterize what is going on in a particular segment? Add
+a few notes below. Again, focus on what you would communicate about this
+analysis to a general audience.
 
-- 
-- 
+-   
+
+-   
 
 ### 🧶 Knit & Check ✅
 
