--- a/lab-1/ll-1-overview-presentation.Rmd
+++ b/lab-1/ll-1-overview-presentation.Rmd
@@ -62,7 +62,145 @@ xaringanExtra::use_tile_view()
 
 ---
 
-# Agenda
+# Purpose and Agenda
+
+We have some data and want to develop a prediction model. Supervised machine learning is suited to this aim. In particular, in this learning lab, we explore how we can train a computer to predict students' withdrawal from a course. We use a large data set, the Open University Learning Analytics Dataset (OULAD), focusing on student data at this point. Our model at this point is relatively simple, a generalized linear model.
+
+## What we'll do in this presentation
+
+- Discussion 1
+- Key Concepts
+- Code-along
+- Discussion 2
+- Introduction to the other parts of this learning lab
+
+---
+
+# Discussion 1
+
+.panelset[
+
+.panel[.panel-name[Discussion]
+
+- 
+- 
+-
+    
+]
+
+.panel[.panel-name[Conceptual Overview]
+
+- 
+- 
+-
+
+]
+
+.panel[.panel-name[Coding Walkthrough]
+
+- 
+- 
+- 
+
+]
+]
+
+---
+
+# Key Concepts
+
+.panelset[
+
+.panel[.panel-name[Discussion]
+
+- 
+- 
+-
+    
+]
+
+.panel[.panel-name[Conceptual Overview]
+
+- 
+- 
+-
+
+]
+
+.panel[.panel-name[Coding Walkthrough]
+
+- 
+- 
+- 
+
+]
+]
+
+---
+
+# Code-along
+
+.panelset[
+
+.panel[.panel-name[Discussion]
+
+- 
+- 
+-
+    
+]
+
+.panel[.panel-name[Conceptual Overview]
+
+- 
+- 
+-
+
+]
+
+.panel[.panel-name[Coding Walkthrough]
+
+- 
+- 
+- 
+
+]
+]
+
+---
+
+# Discussion 2
+
+.panelset[
+
+.panel[.panel-name[Discussion]
+
+- 
+- 
+-
+    
+]
+
+.panel[.panel-name[Conceptual Overview]
+
+- 
+- 
+-
+
+]
+
+.panel[.panel-name[Coding Walkthrough]
+
+- 
+- 
+- 
+
+]
+]
+
+---
+
+# Introduction to the other parts of this learning lab
 
 .panelset[
 
@@ -265,11 +403,9 @@ We'll dive into each of these subsequently
 
 **Loading, setting up**
 
-```{r, message = FALSE, warning = FALSE, echo = TRUE}
+```{r, message = FALSE, warning = FALSE, echo = TRUE, eval=FALSE}
 library(tidyverse)
 library(tidymodels)
-
-students <- read_csv("data/students-ss.csv")
 ```
 ]
 
